fix carousel, useMediaQuery, overflow hidden

--- a/src/components/Slider.scss
+++ b/src/components/Slider.scss
@@ -1,10 +1,11 @@
 .slider {
   box-sizing: border-box;
   width: 100%;
+  overflow: hidden;
 }
 
 .slide {
-  width: 100%;
+  width: 260px;
   transition: 0.5s;
   position: relative;
   z-index: -1;
